--- a/Demographics.css
+++ b/Demographics.css
@@ -2,6 +2,12 @@ html{
 	width: 100%;
 	height: 100%;
 }
+logo{
+display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
 body{
 	width: 100%;
 	height: 100%;
