--- a/public/storyshow.css
+++ b/public/storyshow.css
@@ -75,7 +75,22 @@
 
 .active, .dot:hover {
   background-color: #717171;
+  width: auto;
+  height: auto;
 }
+
+input{
+  display:block;
+  margin-left: auto;
+  margin-right: auto;
+  max-height: 100%;
+  width: 100%;
+  padding: 70px;
+  background-color: white;
+  text-align: left;
+  padding: 80dp
+}
+
 
 /* Fading animation */
 .fade {
