--- a/public/Demographics.css
+++ b/public/Demographics.css
@@ -3,7 +3,8 @@ html{
 	height: 100%;
 }
 h1{
-    text-align: center
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .logo {
@@ -26,23 +27,49 @@ body{
 	background-color: white
     
 }
-input{
+input[type=text] {
+    border: 2px solid lightblue;
+    border-radius: 4px;
     width: 100%;
     padding: 10px 15px;
     margin: 8px 0;
     box-sizing: border-box;
   }
+input[type=radio] {
+  padding-left: 20px;
+  margin: 10px;
+}
+  input[type=submit] {
+    padding: 20px;
+    margin: 20px;
+  }
+.form{
+  border-color: 2px lightblue;
+  border-width: 5px;
+}
 .option{
     display:block;
     margin-left: auto;
     margin-right: auto;
+    height: 100px;
     max-width: 300px;
     padding: 20px;
-    background-color: whitesmoke;
+    background-color: white;
     padding: 50dp
     
 }
-
+#dropdown{
+  width: 100%;
+  height: 40px;
+  border: 2px solid lightblue;
+  border-radius: 4px;
+  background-color: white;
+}
+::-webkit-input-placeholder { 
+  color: black;
+  font-size: 14px;
+  text-align: center;
+}
 select{
    margin: 8px 0;
 }
