--- a/public/Demographics.css
+++ b/public/Demographics.css
@@ -58,6 +58,12 @@ input[type=radio] {
     padding: 50dp
     
 }
+.mySelect{
+  width: 70%; 
+  height: 25px;
+   border-color: 2px solid lightblue; 
+   border-width: 4px;
+}
 #dropdown{
   width: 100%;
   height: 40px;
