--- a/public/storyshow.css
+++ b/public/storyshow.css
@@ -26,7 +26,7 @@ img{
   top: 50%;
   width: auto;
   margin-top: -22px;
-  padding: 16px;
+  padding: 30px;
   color: white;
   font-weight: bold;
   font-size: 18px;
@@ -72,17 +72,16 @@ img{
   height: 15px;
   width: 15px;
   margin: 0 2px;
+  text-align:center;
+  margin-left:auto;
+  margin-right:auto;
   background-color: #bbb;
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
 }
 
-.active, .dot:hover {
-  background-color: #717171;
-  width: auto;
-  height: auto;
-}
+
 
 input{
   display:block;
