--- a/public/storyshow.css
+++ b/public/storyshow.css
@@ -88,6 +88,7 @@ input{
   margin-left: auto;
   margin-right: auto;
   max-height: 100%;
+  font-size: 32;
   width: 100%;
   padding: 70px;
   background-color: white;
