--- a/public/Demographics.css
+++ b/public/Demographics.css
@@ -58,7 +58,7 @@ input[type=radio] {
    border-color: 2px solid lightblue; 
    border-width: 4px;
 }
-#dropdown{
+.dropdown{
   width: 100%;
   height: 40px;
   border: 2px solid lightblue;
