--- a/public/storyshow.css
+++ b/public/storyshow.css
@@ -82,7 +82,12 @@ img{
 }
 
 #edit{
-  text-align: left 
+  text-align: left;
+  display:block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 300px;
+  padding: 16px;
 }
 
 input{
